2003-06-03  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/cronjob.py: module for defining and executing cron jobs.
	There also needs to be a service that defines a crontab that can
	be configured in sw.conf, and a swpython script to run the crontab 
	(standalone or from the normal cron).

2003-05-26  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/vfs/vfs.py (LocalFS.find_path): convenience method for
	walking up the fs to find a file.

2003-05-25  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/SkunkWeb/confvars.py.in (DEFAULT_CACHE),
	SkunkWeb/Services/ae_component.py (__initConfig): default cache
	location was being set improperly.

	* util/rpm/skunkweb.spec, util/rmp/skunkweb.init,
	util/rpm/skunkweb.logrotate: more improvements from SR, including
	log rotation and init scripts, now moved into util/rpm.

2003-05-24  Jacob Smullyan  <smulloni@smullyan.org>

	* skunkweb.spec: added some configuration with the intent of
	making the mod_skunkweb build with apache 1.3.

	* pylibs/PyDO/psycopgconn.py, pylibs/PyDO/PyDBI.py
	(_driverConfig): S. Reifschneider's contributed driver for the
	psycopg postgresql driver.

	*:Makefile.in, skunkWeb/Makefile.in,
	SkunkWeb/Services/Makefile.in, SkunkWeb/mod_skunkweb/Makefile.in,
	docs/Makefile.in, pylibs/Makefile.in: another build patch for RPM
	from SR, this time for INSTALL_FLAGS. skunkweb.spec: now builds
	with Python 2.1 or 2.2.

	* SkunkWeb/configure.in, SkunkWeb/configure, configure.in,
	configure: CACHE, DOCROOT, DOCSDIR and LOGDIR were not getting set
	properly, The configure options for them now all begin with
	"--with-".

	* skunkweb.spec: incorporating SR's latest fixes to what I screwed
	up.
	(Requires): changing path of cache directory argument to cache reaper.

	* SkunkWeb/mod_skunkweb/Makefile.in: adding DESTDIR to install.

2003-05-23  Jacob Smullyan  <smulloni@smullyan.org>

	* Makefile.in, SkunkWeb/Makefile.in,
	SkunkWeb/mod_skunkweb/Makefile.in: absorbing SR's build patches;