@@ -4,6 +4,8 @@
 	There also needs to be a service that defines a crontab that can
 	be configured in sw.conf, and a swpython script to run the crontab 
 	(standalone or from the normal cron).
+	(CronLogger, CronTab): fixed typos in Logger classes (left out
+	"self"), and removed user/group stuff.
 
 2003-05-26  Jacob Smullyan  <smulloni@smullyan.org>
 
